Created 3 unit tests for the setLength Function.

--- a/Task01/Task01.vcxproj
+++ b/Task01/Task01.vcxproj
@@ -20,9 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
-    <ProjectGuid>{FD608D2A-B803-43EC-A642-A9E3BF6332B4}</ProjectGuid>
+    <ProjectGuid>{E0F85940-B7AE-4D44-A11C-E8BAA052C698}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>BCSRecUnittest</RootNamespace>
+    <RootNamespace>Task01</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
     <ProjectSubType>NativeUnitTestProject</ProjectSubType>
   </PropertyGroup>
@@ -157,13 +157,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="BCSRecUnittest.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Task01.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
