--- a/Task02/Task02.vcxproj.filters
+++ b/Task02/Task02.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="BCSRecUnittest.cpp">
+    <ClCompile Include="Task02.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp">
